--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
             </ul>
         </nav>
-        <p class="footer__copyright">&copy; 2020. Впишите своё имя</p>
+        <p class="footer__copyright">&copy; 2020. Вдовыдченко Никита</p>
     </footer>
 </body>
 </html>
