--- a/index.html
+++ b/index.html
@@ -33,45 +33,19 @@
                 <li>Аэропортов <p class="intro__amount">241</p></li>
             </ul>
         </section>
-        <section>
-            <ul class="photo-grid">
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото">
-                </li>
-                <li>
-                    <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото">
-                </li>
-            </ul>
+        <section class="photo-grid">
+            <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото">
+            <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото">
         </section>
         <section class="places">
             <div class="place">
@@ -135,7 +109,7 @@
             </div>
         </section>
         <section class="cover">
-            <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+            <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
